Bug 88728 - [BSW|SKL][Media][Encode]vaDeriveImage failed (483) when doing JPEG encoding test
Summary: [BSW|SKL][Media][Encode]vaDeriveImage failed (483) when doing JPEG encoding test
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Pengfei
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
: 88732 88733 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-23 06:02 UTC by zhixinx.liu
Modified: 2015-02-02 04:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (2.92 KB, patch)
2015-01-23 08:24 UTC, Pengfei
Details | Splinter Review

Description zhixinx.liu 2015-01-23 06:02:24 UTC
vaDeriveImage failed (483) when doing jpeg encoder test.

1. Testing Steps:
========================================================================
use following command to create jpeg file:
jpegenc 2560 1440 ./2560x1440.jpg_2560x1440.GRAY ./encoding/2560x1440.jpg_2560x1440.GRAY_50.jpg 4 50

2.Log:
========================================================================
[root@x-bswmedia jpeg]# jpegenc 2560 1440 ./2560x1440.jpg_2560x1440.GRAY ./encoding/2560x1440.jpg_2560x1440.GRAY_50.jpg 4 50
libva error: Open file /root/trace_test/tracelog.28710.01915b20 failed (No such file or directory)
libva info: VA-API version 0.99.0
libva info: va_getDriverName() returns 0
libva info: Trying to open /opt/X11R7/lib/dri/i965_drv_video.so
libva info: Found init function __vaDriverInit_0_99
libva info: va_openDriver() returns 0
upload_yuv_to_surface:vaDeriveImage (483) failed,exit

4. Testing Env:
========================================================================
Libva:(staging) d9626b77f865ce7bdbc8c78988a86d3e4f55d67b
Libva_intel_driver:(staging)22439f1fcebbd2c1d563503720b1123a4bb97160

5. Frequency of Occurence:
========================================================================
100%
Comment 1 Pengfei 2015-01-23 08:19:10 UTC
failed to check the context when JPEG encode in vaMapBufffer(). it should be remvoed. the patch is ready.
Comment 2 Pengfei 2015-01-23 08:24:23 UTC
Created attachment 112699 [details] [review]
patch
Comment 3 haihao 2015-01-23 08:54:42 UTC
*** Bug 88732 has been marked as a duplicate of this bug. ***
Comment 4 haihao 2015-01-23 08:55:04 UTC
*** Bug 88733 has been marked as a duplicate of this bug. ***
Comment 5 zhixinx.liu 2015-01-26 06:04:33 UTC
(In reply to Pengfei from comment #2)
> Created attachment 112699 [details] [review] [review]
> patch

this issue cannot be reproduced after applying your patch.
Comment 6 haihao 2015-02-02 04:41:56 UTC
commit a8ca5f911c7c19b5ede3f96ac6113606b9dd4d95
Author: Qu,Pengfei <Pengfei.Qu@intel.com>
Date:   Mon Jan 26 13:01:23 2015 +0800

    Disable the context check to avoid JPEG ENC failed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.