Disable the context check to avoid JPEG ENC failed

https://bugs.freedesktop.org/show_bug.cgi?id=88728
Signed-off-by: Qu,Pengfei <Pengfei.Qu@intel.com>
(cherry picked from commit a8ca5f911c7c19b5ede3f96ac6113606b9dd4d95)